<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:background="@color/sapphire"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/view_bookmark"
        android:layout_width="0dp"
        android:layout_height="180dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/rectangle_bookmark"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_iv_dog_book"
        android:layout_width="120dp"
        android:layout_height="160dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintStart_toStartOf="@id/view_bookmark"
        app:layout_constraintTop_toTopOf="@id/view_bookmark">
        <ImageView
            android:id="@+id/iv_dog_pic_bookmark"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_dog_name_bookmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/cv_iv_dog_book"
        app:layout_constraintEnd_toEndOf="@id/view_bookmark"
        app:layout_constraintTop_toTopOf="@id/cv_iv_dog_book"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/dog_name"/>

    <TextView
        style="@style/style_detail_activity"
        android:id="@+id/tv_bk_al"
        android:text="@string/activity_lv"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@id/cv_iv_dog_book"
        app:layout_constraintTop_toBottomOf="@id/tv_dog_name_bookmark"/>

    <TextView
        style="@style/style_detail_activity"
        android:id="@+id/tv_bk_bl"
        android:text="@string/barking_lv"
        app:layout_constraintStart_toEndOf="@id/cv_iv_dog_book"
        app:layout_constraintTop_toBottomOf="@id/tv_bk_al"
        app:layout_constraintBottom_toTopOf="@id/tv_bk_tn"/>

    <TextView
        style="@style/style_detail_activity"
        android:id="@+id/tv_bk_tn"
        android:text="@string/trainability"
        app:layout_constraintStart_toEndOf="@id/cv_iv_dog_book"
        app:layout_constraintTop_toBottomOf="@id/tv_bk_bl"
        app:layout_constraintBottom_toTopOf="@id/tv_bk_pn"/>

    <TextView
        style="@style/style_detail_activity"
        android:id="@+id/tv_bk_pn"
        android:text="@string/protective_nature"
        app:layout_constraintStart_toEndOf="@id/cv_iv_dog_book"
        app:layout_constraintBottom_toBottomOf="@id/cv_iv_dog_book" />

    <TextView
        style="@style/style_result_detail_activity"
        android:id="@+id/tv_bk_result_al"
        android:text="@string/standard"
        app:layout_constraintEnd_toEndOf="@id/view_bookmark"
        app:layout_constraintTop_toTopOf="@id/tv_bk_al" />

    <TextView
        style="@style/style_result_detail_activity"
        android:id="@+id/tv_bk_result_bl"
        android:text="@string/standard"
        app:layout_constraintEnd_toEndOf="@id/view_bookmark"
        app:layout_constraintTop_toTopOf="@id/tv_bk_bl" />

    <TextView
        style="@style/style_result_detail_activity"
        android:id="@+id/tv_bk_result_tn"
        android:text="@string/standard"
        app:layout_constraintEnd_toEndOf="@id/view_bookmark"
        app:layout_constraintTop_toTopOf="@id/tv_bk_tn" />

    <TextView
        style="@style/style_result_detail_activity"
        android:id="@+id/tv_bk_result_pn"
        android:text="@string/standard"
        app:layout_constraintEnd_toEndOf="@id/view_bookmark"
        app:layout_constraintTop_toTopOf="@id/tv_bk_pn"/>

</androidx.constraintlayout.widget.ConstraintLayout>