<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sapphire"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/relative_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iv_banner"
            android:layout_width="match_parent"
            android:layout_height="228dp"
            android:src="@drawable/background"/>
    </RelativeLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/relative_layout_1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_breed"
                android:text="@string/dog_breed"
                android:drawableRight="@drawable/ic_bullet_list"
                style="@style/style_menu"/>

            <Button
                android:id="@+id/btn_camera"
                android:text="@string/camera"
                android:drawableRight="@drawable/ic_camera"
                app:layout_constraintTop_toBottomOf="@id/btn_breed"
                style="@style/style_menu"/>

            <Button
                android:id="@+id/btn_bookmark"
                android:text="@string/bookmark"
                android:drawableRight="@drawable/ic_bookmark"
                app:layout_constraintTop_toBottomOf="@id/btn_camera"
                style="@style/style_menu"/>

            <Button
                android:id="@+id/btn_exit"
                android:text="@string/exit"
                android:drawableRight="@drawable/ic_logout"
                app:layout_constraintTop_toBottomOf="@id/btn_bookmark"
                style="@style/style_menu"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>