<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sapphire"
    android:padding="15dp"
    tools:context=".menu1.DetailBreedActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/iv_iv_dog_pic_detail"
        android:layout_width="120dp"
        android:layout_height="160dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_dog_name_detail"
        android:layout_marginTop="15dp">
        <ImageView
            android:id="@+id/iv_dog_pic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/gambar_detail_anjing" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_dog_name_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/dandelion"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/dog_name"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/view_background_detail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:backgroundTint="@color/dandelion"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_iv_dog_pic_detail"
        app:layout_constraintTop_toTopOf="@id/iv_iv_dog_pic_detail"
        app:layout_constraintBottom_toBottomOf="@id/iv_iv_dog_pic_detail"
        />

    <TextView
        style="@style/style_detail_activity"
        android:id="@+id/tv_al"
        android:text="@string/activity_lv"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/view_background_detail"
        app:layout_constraintTop_toTopOf="@id/view_background_detail"/>

    <TextView
        style="@style/style_detail_activity"
        android:id="@+id/tv_bl"
        android:text="@string/barking_lv"
        app:layout_constraintStart_toStartOf="@id/view_background_detail"
        app:layout_constraintTop_toBottomOf="@id/tv_al"
        app:layout_constraintBottom_toTopOf="@id/tv_tn"/>

    <TextView
        style="@style/style_detail_activity"
        android:id="@+id/tv_tn"
        android:text="@string/trainability"
        app:layout_constraintStart_toStartOf="@id/view_background_detail"
        app:layout_constraintTop_toBottomOf="@id/tv_bl"
        app:layout_constraintBottom_toTopOf="@id/tv_pn"/>

    <TextView
        style="@style/style_detail_activity"
        android:id="@+id/tv_pn"
        android:text="@string/protective_nature"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="@id/view_background_detail"
        app:layout_constraintBottom_toBottomOf="@id/view_background_detail" />

    <TextView
        style="@style/style_result_detail_activity"
        android:id="@+id/tv_result_al"
        android:text="@string/standard"
        app:layout_constraintEnd_toEndOf="@id/view_background_detail"
        app:layout_constraintTop_toTopOf="@id/tv_al" />

    <TextView
        style="@style/style_result_detail_activity"
        android:id="@+id/tv_result_bl"
        android:text="@string/standard"
        app:layout_constraintEnd_toEndOf="@id/view_background_detail"
        app:layout_constraintTop_toTopOf="@id/tv_bl" />

    <TextView
        style="@style/style_result_detail_activity"
        android:id="@+id/tv_result_tn"
        android:text="@string/standard"
        app:layout_constraintEnd_toEndOf="@id/view_background_detail"
        app:layout_constraintTop_toTopOf="@id/tv_tn" />

    <TextView
        style="@style/style_result_detail_activity"
        android:id="@+id/tv_result_pn"
        android:text="@string/standard"
        app:layout_constraintEnd_toEndOf="@id/view_background_detail"
       app:layout_constraintTop_toTopOf="@id/tv_pn"/>

    <TextView
        android:id="@+id/tv_chp_judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/togbut_favorite"
        app:layout_constraintTop_toTopOf="@id/togbut_favorite"
        app:layout_constraintBottom_toBottomOf="@id/togbut_favorite"
        android:textColor="@color/dandelion"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/common_health_problems" />
    
    <ToggleButton
        android:id="@+id/togbut_favorite"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:textOn=""
        android:textOff=""
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@id/view_background_detail"
        app:layout_constraintTop_toBottomOf="@id/view_background_detail"
        android:background="@drawable/bookmark_selection"/>

    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_bookmark"
        android:translationZ="100dp"
        app:layout_constraintStart_toStartOf="@id/togbut_favorite"
        app:layout_constraintEnd_toEndOf="@id/togbut_favorite"
        app:layout_constraintTop_toTopOf="@id/togbut_favorite"
        app:layout_constraintBottom_toBottomOf="@id/togbut_favorite"
        android:contentDescription="@string/logo_bookmark" />

    <androidx.cardview.widget.CardView
        android:id="@+id/view_background_chp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/dandelion"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="@id/view_background_detail"
        app:layout_constraintStart_toStartOf="@id/iv_iv_dog_pic_detail"
        app:layout_constraintBottom_toBottomOf="@id/tv_isi_chp"
        app:layout_constraintTop_toBottomOf="@id/togbut_favorite"/>

    <TextView
        android:id="@+id/tv_isi_chp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:translationZ="100dp"
        app:layout_constraintStart_toStartOf="@id/view_background_chp"
        app:layout_constraintEnd_toEndOf="@id/view_background_chp"
        app:layout_constraintTop_toTopOf="@id/view_background_chp"
        app:layout_constraintBottom_toBottomOf="@id/view_background_chp"/>


</androidx.constraintlayout.widget.ConstraintLayout>